# Bellows

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  action.yml  bellows-concept.md  five-phase-plan.md  implementation-plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/bellows-cli/: Cargo.toml
crates/bellows-cli/src/: main.rs  terminal.rs
crates/bellows-core/: Cargo.toml
crates/bellows-core/src/: lib.rs
crates/bellows-server/: Cargo.toml
crates/bellows-server/src/: main.rs
demo/: Cargo.toml
demo/crates/forge-cli/: Cargo.toml
demo/crates/forge-cli/src/: main.rs
demo/crates/forge-core/: Cargo.toml
demo/crates/forge-core/src/: lib.rs  temperature.rs
demo/crates/forge-engine/: Cargo.toml
demo/crates/forge-engine/src/: lib.rs
demo/phase3-fixture/: Cargo.toml  build.rs
demo/phase3-fixture/generator/: Cargo.toml
demo/phase3-fixture/generator/src/: main.rs
demo/phase3-fixture/src/: main.rs
docs/: manifold.md  operations.md  production-hardening.md  protocol.md  validation.md
scripts/: demo.sh  five-phase-demo.sh  hardening.sh
