[workspace]
members = [
    "crates/bellows-core",
    "crates/bellows-cli",
    "crates/bellows-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Manifold-Game/bellows"
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
blake3 = "1.8.3"
clap = { version = "4.6.0", features = ["derive", "env"] }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[profile.release]
lto = "thin"
strip = true
