[package]
name = "bellows-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "bellows"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bellows-core = { path = "../bellows-core" }
blake3.workspace = true
clap.workspace = true
fs2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
