[package]
name = "bellows-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "bellowsd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bellows-core = { path = "../bellows-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
