[package]
name = "bellows-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "bellowsd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bellows-core = { path = "../bellows-core" }
blake3.workspace = true
clap.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true
